force-app/main/default/objects/Notion_Sync_Log_Event__e/Notion_Sync_Log_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event for asynchronous logging of Notion sync operations</description>
    <label>Notion Sync Log Event</label>
    <pluralLabel>Notion Sync Log Events</pluralLabel>
</CustomObject>