force-app/main/default/objects/Notion_Sync_Log_Event__e/fields/API_Calls_Made__c.field-meta.xml
<CustomField>
    <fullName>API_Calls_Made__c</fullName>
    <description>Number of API calls made during sync</description>
    <label>API Calls Made</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>