force-app/main/default/objects/Notion_Sync_Log_Event__e/fields/CPU_Time_Used__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Used__c</fullName>
    <description>CPU time used in milliseconds</description>
    <label>CPU Time Used</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>