force-app/main/default/objects/Notion_Sync_Log_Event__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message if sync failed</description>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>