force-app/main/default/objects/Notion_Sync_Log_Event__e/fields/Notion_Page_Id__c.field-meta.xml
<CustomField>
    <fullName>Notion_Page_Id__c</fullName>
    <description>Notion page ID if sync was successful</description>
    <label>Notion Page ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>