force-app/main/default/objects/Notion_Sync_Log_Event__e/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>Salesforce object type (e.g., Account, Contact)</description>
    <label>Object Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>