force-app/main/default/objects/Notion_Sync_Log_Event__e/fields/Rate_Limited__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the operation was rate limited</description>
    <label>Rate Limited</label>
    <type>Checkbox</type>
</CustomField>