force-app/main/default/objects/Notion_Sync_Log_Event__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Salesforce record ID being synced</description>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>