force-app/main/default/objects/Notion_Sync_Log_Event__e/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>Number of retry attempts</description>
    <label>Retry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>