force-app/main/default/objects/Notion_Sync_Log_Event__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Sync status (Success, Failed, Deferred)</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>